# veritas

./: .gitignore  Makefile  README.md  pyproject.toml  resumo_pesquisa_rag_aracaju.txt  vec.db  ws_test.html
data/: dados_A409_D_2025-01-01_2025-10-19.csv
src/: config.py  main.py
src/api/: __init__.py
src/api/exceptions/: docs_excpetions.py  store_excpetions.py
src/api/http/: chat.py  health.py  scraping.py  store.py
src/api/v1/: docs.py  scraping.py  store.py
src/http/: __init__.py
src/http/exceptions/: docs_excpetions.py
src/http/v1/: docs.py  health.py  vector_store.py
src/lib/: ffmpeg.py  langchain.py
src/lib/clients/: langchain.py  openai.py  serpapi.py
src/schemas/: agent_schema.py  chat_schema.py  docs_schema.py  scraping_schema.py  store_schema.py
src/scraping/: request.py  search.py
src/services/: chat_service.py  docs_service.py  scraping_service.py  store_service.py
src/ws/: __init__.py
src/ws/v1/: route.py
