[project]
name = "veritas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "sentence-transformers>=5.1.0",
    "sqlite-vec>=0.1.6",
    "pydantic-settings>=2.9.0",
]
