[project]
name = "veritas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "sentence-transformers>=5.1.0",
    "sqlite-vec>=0.1.6",
    "pydantic-settings>=2.9.0",
    "langchain-openai>=0.3.31",
    "python-dotenv>=1.1.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "ffmpeg-python>=0.2.0",
    "beautifulsoup4>=4.14.2",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=6.1.0",
]
